# mssql-sp-harness

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pages.yml  publish-pypi.yml
docs/: index.html  theme.js
docs/scss/: _base.scss  _buttons.scss  _code.scss  _flow.scss  _hero.scss  _mixins.scss  _sections.scss  _sidebar.scss  _tables.scss  _tabs.scss  _themes.scss  _variables.scss  styles.scss
docs/scss/css/: styles.css  styles.css.map
samples/: aspstate_sql2016_no_retry_debug.sql  ent-sql-out.sql  ent-sql-out.txt  ent_complex_out_v1.sql  enterprise_complex_proc.sql  enterprise_complex_proc_dbg.sql  loop_with_update.sql  my_proc.sql  my_proc_2.sql  my_proc_out.sql  simple_proc.sql
scripts/: publish-pypi.sh
src/mssql_sp_harness/: __init__.py  __main__.py  cli.py  console.py  emit.py  inventory.py  parse.py  t_sql_scan.py  transform.py
src/sql_sp_harness/: __init__.py  __main__.py  cli.py  commands.py  comments.py  constants.py  dml_preview.py  emit.py  encoding.py  inventory.py  parse.py  run_log.py  script_prepare.py  t_sql_scan.py  transform.py
tests/: test_comment_logging.py  test_comments.py  test_dml_preview.py  test_encoding.py  test_inventory.py  test_inventory_report.py  test_parse_fallback.py  test_run_log.py  test_script_prepare.py  test_t_sql_scan.py  test_transform.py
