[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-sp-harness"
dynamic = ["version"]
description = "Generate safe T-SQL stored-procedure debug harness scripts (analyze + DML previews)"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Deepraj Adhikary" }]
keywords = [
  "sql",
  "sql-server",
  "t-sql",
  "stored-procedure",
  "debug-harness",
  "test-harness",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "sqlglot>=25.0.0",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/DeeprajDeveloper/sql-sp-harness"
Documentation = "https://github.com/DeeprajDeveloper/sql-sp-harness#readme"
Repository = "https://github.com/DeeprajDeveloper/sql-sp-harness"
Issues = "https://github.com/DeeprajDeveloper/sql-sp-harness/issues"
Changelog = "https://github.com/DeeprajDeveloper/sql-sp-harness/releases"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "build>=1.0.0", "twine>=5.0.0"]

[project.scripts]
sql-sp-harness = "sql_sp_harness.cli:app"
sp-harness = "sql_sp_harness.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sql_sp_harness.__version__" }

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
